--- a/force-app/main/default/pages/XMLFeed.page
+++ b/force-app/main/default/pages/XMLFeed.page
@@ -1,64 +1,66 @@
-<apex:page controller="XMLFeedGenerator" standardStylesheets="false" showHeader="false">
+<apex:page standardStylesheets="false" showHeader="false" sidebar="false" controller="XMLFeedGenerator">
     <html>
         <head>
-            <title>XML Feed</title>
+            <title>XML Formatting</title>
             <script>
-                var prettifyXml = function(sourceXml) {
-                    var xmlDoc = new DOMParser().parseFromString(sourceXml, 'application/xml');
-
-                    // Check for null values and replace them with an empty string
-                    xmlDoc.querySelectorAll('*').forEach(function(node) {
-                        if (node.textContent === 'null') {
-                            node.textContent = '';
+                // Define the formatXml function
+                function formatXml(xml) {
+                    var formatted = '';
+                    var reg = /(>)(<)(\/*)/g;
+                    xml = xml.replace(reg, '$1\r\n$2$3');
+                    var pad = 0;
+                    xml.split('\r\n').forEach(function(node) {
+                        var indent = 0;
+                        if (node.match(/.+<\/\w[^>]*>$/)) {
+                            indent = 0;
+                        } else if (node.match(/^<\/\w/)) {
+                            if (pad != 0) {
+                                pad -= 1;
+                            }
+                        } else if (node.match(/^<\w[^>]*[^\/]>.*$/)) {
+                            indent = 1;
+                        } else {
+                            indent = 0;
                         }
+
+                        var padding = '';
+                        for (var i = 0; i < pad; i++) {
+                            padding += '  ';
+                        }
+
+                        formatted += padding + node + '\r\n';
+                        pad += indent;
                     });
 
-                    var xsltDoc = new DOMParser().parseFromString([
-                        // describes how we want to modify the XML - indent everything
-                        '<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform">',
-                        '  <xsl:strip-space elements="*"/>',
-                        '  <xsl:template match="para[content-style][not(text())]">',
-                        '    <xsl:value-of select="normalize-space(.)"/>',
-                        '  </xsl:template>',
-                        '  <xsl:template match="node()|@*">',
-                        '    <xsl:copy><xsl:apply-templates select="node()|@*"/></xsl:copy>',
-                        '  </xsl:template>',
-                        '  <xsl:output indent="yes"/>',
-                        '</xsl:stylesheet>',
-                    ].join('\n'), 'application/xml');
+                    return formatted;
+                }
 
-                    var xsltProcessor = new XSLTProcessor();
-                    xsltProcessor.importStylesheet(xsltDoc);
-                    var resultDoc = xsltProcessor.transformToDocument(xmlDoc);
-                    var resultXml = new XMLSerializer().serializeToString(resultDoc);
-                    return resultXml;
-                };
+                // Sample XML data
+                var xml_raw = '{!xmlstring}';
 
-                var xmlString = '{!xmlstring}';
-                // Replace null values with empty strings
-                xmlString = xmlString.replace(/<[^>]+>null<\/[^>]+>/g, '');
+                // Format the XML
+                var xml_formatted = formatXml(xml_raw);
 
-                var prettyXml = prettifyXml(xmlString);
+                // Escape special characters for display in HTML
+                var xml_escaped = xml_formatted.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/ /g, '&nbsp;').replace(/\n/g, '<br />');
 
-                // Set the formatted XML in the textarea
-                window.onload = function() {
-                    document.querySelector('.output-holder').value = prettyXml;
-                };
+                // Create a div to display the formatted XML
+                var mydiv = document.createElement('div');
+                mydiv.innerHTML = xml_escaped;
+
+                // Append the div to the body
+                document.body.appendChild(mydiv);
             </script>
             <style>
-       			textarea{
-                    border: none;
-                    width: 100%;
-                    height: 90vh;
+                div{
+                    font-size: 1.2rem;
+                    font-style: normal;
                     font-family: monospace;
-                    font-size: large;
-                    resize: none;
                 }
-  			</style>
+            </style>   
         </head>
         <body>
-            <div>Account Record Data....</div>
-            <textarea class="output-holder" disabled="true"></textarea>
+            <!-- No content here, as the XML will be displayed dynamically -->
         </body>
     </html>
 </apex:page>
