--- a/force-app/main/default/aura/GenerateXMLFeedURL/GenerateXMLFeedURL.cmp
+++ b/force-app/main/default/aura/GenerateXMLFeedURL/GenerateXMLFeedURL.cmp
@@ -4,25 +4,32 @@
     <aura:attribute name="recordLoadError" type="String"/>
     <force:recordData aura:id="forceRecord" recordId="{!v.recordId}" fields="Id, Name" targetFields="{!v.selectionCategory}" targetError="{!v.recordLoadError}" />
     <aura:attribute name="xmlFeedURL" type="String"/>
-
-    <!-- <div class="container">
-        <div class="copy-text" aura:id="copyText">
-            <input type="text" aura:id="text" class="text" value="https://mvclouds36-dev-ed.develop.my.salesforce-sites.com/k1/XMLFeed"/>
-            <button onclick="{!c.copyText}">
-                <lightning:icon iconName="utility:copy" alternativeText="Copy" title="Copy" />
-            </button>
-        </div>
-    </div> -->
-    <!-- Input field with a lightning button used for copy to clipboard functionality -->
     
-    <div class="container">
+    <div class="container" style="display: flex;flex-direction: column;gap: 10px;">
         <div class="copy-text" aura:id="copyText">
-            <input value="{!'https://mvclouds36-dev-ed.develop.my.salesforce-sites.com/k1/XMLFeed?Id=' + v.selectionCategory.Id}" aura:id="inputF" disabled="true" class="output-holder"/>
-            <lightning:button iconName="utility:copy_to_clipboard"
-                            onclick="{!c.copyInputFieldValue}"
-                            label="Copy"
-                            aura:id="btn2"/>
+            <div>
+            	<p style="font-size: larger;font-weight: 500;">Property Finder</p>
+            </div>    
+            <div style="display: flex;flex-direction: row;">
+            	<input value="{!'https://houzonrealestatellc.my.salesforce-sites.com/XMLFeedForPF?Id=' + v.selectionCategory.Id}" aura:id="inputF1" disabled="true" class="output-holder1"/>
+            	<lightning:button iconName="utility:copy_to_clipboard"
+                                onclick="{!c.copyInputFieldValue}"
+                                label="Copy"
+                                aura:id="btn1"/>
+            </div>    
+        </div>
+        <div class="copy-text" aura:id="copyText">
+            <div>
+            	<p style="font-size: larger;font-weight: 500;">Bayut and Dubizzle</p>
+            </div>
+            <div style="display: flex;flex-direction: row;">
+                <input value="{!'https://houzonrealestatellc.my.salesforce-sites.com/XMLFeed?Id=' + v.selectionCategory.Id}" aura:id="inputF2" disabled="true" class="output-holder2"/>
+                <lightning:button iconName="utility:copy_to_clipboard"
+                                onclick="{!c.copyInputFieldValue}"
+                                label="Copy"
+                                aura:id="btn2"/>
+            </div>    
         </div>                  
     </div>
 
-</aura:component>	
+</aura:component>
